tests/functional2/lang/substring/eval-fail.err.exp
error:
       … while calling the 'substring' builtin
         at /pwd/in.nix:1:1:
            1| builtins.substring (builtins.sub 0 1) 1 "x"
             | ^
            2|

       error: negative start position in 'substring'
